[package]
name = "cached-eth-rpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
anyhow = "1.0.71"
clap = { version = "4.3.4", features = ["derive"] }
env_logger = "0.10.0"
futures = "0.3.28"
hex = "0.4.3"
log = "0.4.19"
primitive-types = "0.12.1"
reqwest = { version = "0.11.18", features = ["rustls", "json", "serde_json"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
